--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <p>Enthusiastic, Motivated, teamwork-oriented, Data Analyst with significant education, knowledge, and skills.Passionate professional
                         with the ability to solve challenging problems. I'm outgoing and dedicated. Seeking to apply my knowledge and passion for data to contribute effectively to the organization's success. I believe that a person should work on developing their professional skills and learning new things all the time.
                    <br>
-                    <a href="images/Resume.pdf">Download CV</a>
+                    <a href="Resume.pdf">Download CV</a>
                 </div>
             </div>
         </div>
